--- a/src/colorbase.scss
+++ b/src/colorbase.scss
@@ -1,6 +1,6 @@
 $color-primary : rgba(109,91,208,1);
-$color-title: rgba(110,104,147,1);
-$color-plain: rbga(255,255,255,1);
+$color-secondary: rgba(110,104,147,1);
+$color-plain: rgb(255,255,255);
 $color-positive: rgba(51,159,51,1);
 $color-negative: rgba(222,64,64,1);
-$color-warning: rbga(176,130,51,1);
+$color-warning: rgba(176,130,51,1);
