--- a/src/index.scss
+++ b/src/index.scss
@@ -1,121 +1,157 @@
 @import "./colorbase.scss";
 
-.cst-sidebar{    
-    background-color: $color-plain;    
-    width: 250px;    
-    border-right: 0.6px solid lighten($color-primary, 20%);
-    position: fixed;    
-    top: 0;    
-    bottom: 0;
-    left: 0;
-    min-height: 100vh !important;
-    transition: 0.3s;  
-    overflow-x: hidden;     
-    overflow-y: auto; 
-    height: 100vh;
-    z-index: 2;
+.cst-sidebar {
+  background-color: $color-plain;
+  width: 250px;
+  border-right: 0.6px solid lighten($color-primary, 20%);
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  min-height: 100vh !important;
+  transition: 0.3s;
+  overflow-x: hidden;
+  overflow-y: auto;
+  height: 100vh;
+  z-index: 2;
 }
 
-.cst-sidebar-collapsed{
-    width: 0px;
+.cst-sidebar-collapsed {
+  width: 0px;
+  background-color: $color-plain;
+  border-right: 0.6px solid lighten($color-primary, 20%);
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  min-height: 100vh !important;
+  transition: 0.3s;
+  overflow: hidden !important;
+  overflow-y: auto;
+  height: 100vh;
+  z-index: 2;
+}
+
+.cst-content {
+  padding-left: 250px;
+  transition: 0.3s;
+}
+
+.cst-content-extended {
+  padding-left: 0px;
+  transition: 0.3s;
+}
+
+.cst-heading-bg {
+  background-color: lighten($color-primary, 32%);
+}
+
+.cst-avatar-bg {
+  // background-color: lighten($color-secondary, 32%);
+  background-color: $color-secondary;
+  color: $color-plain;
+}
+
+.cst-section-shadow {
+  box-shadow: -1px 1px 28px -8px rgba(0, 0, 0, 0.75);
+  -webkit-box-shadow: -1px 1px 28px -8px rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: -1px 1px 28px -8px rgba(0, 0, 0, 0.75);
+}
+
+.cst-text-primary {
+  color: $color-primary;
+}
+
+.cst-text-secondary {
+  color: $color-secondary;
+}
+
+.cst-clickable {
+  cursor: pointer;
+}
+
+.cst-letter-spacing {
+  letter-spacing: 4px;
+}
+
+.cst-border-bottom {
+  border-bottom: 1px solid rgba($color-primary, 0.4);
+}
+
+.cst-btn-primary {
+  background-color: $color-primary;
+  color: $color-plain;
+
+  &:hover {
     background-color: $color-plain;
-    border-right: 0.6px solid lighten($color-primary, 20%);
-    position: fixed;    
-    top: 0;    
-    bottom: 0;
-    left: 0;
-    min-height: 100vh !important;
-    transition: 0.3s; 
-    overflow: hidden !important;  
-    overflow-y: auto; 
-    height: 100vh;  
-    z-index: 2;
-}
-
-.cst-content{
-    padding-left: 250px;    
-    transition: 0.3s; 
-}
-
-.cst-content-extended{
-    padding-left: 0px;   
-    transition: 0.3s;  
-}
-
-.cst-heading-bg{
-    background-color: lighten($color-primary, 32%);
-}
-
-.cst-avatar-bg{
-    // background-color: lighten($color-secondary, 32%);
-    background-color: $color-secondary;
-    color: $color-plain;
-}
-
-.cst-section-shadow{
-    box-shadow: -1px 1px 28px -8px rgba(0,0,0,0.75);
-    -webkit-box-shadow: -1px 1px 28px -8px rgba(0,0,0,0.75);
-    -moz-box-shadow: -1px 1px 28px -8px rgba(0,0,0,0.75);
-}
-
-.cst-text-primary{
+    border: 1px solid $color-primary;
     color: $color-primary;
+  }
 }
 
-.cst-text-secondary{
-    color: $color-secondary;
-}
+.cst-btn-secondary {
+  background-color: $color-plain;
+  border: 1px solid $color-primary;
+  color: $color-primary;
 
-.cst-clickable{
-    cursor: pointer;
-}
-
-.cst-letter-spacing{
-    letter-spacing: 4px;
-}
-
-.cst-border-bottom{
-    border-bottom: 1px solid rgba($color-primary,0.4);
-}
-
-.cst-btn-primary{
+  &:hover {
     background-color: $color-primary;
+    border: 1px solid $color-primary;
     color: $color-plain;
-    
-    &:hover{
-        background-color: $color-plain;
-        border: 1px solid $color-primary;   
-        color: $color-primary;
-    }
+  }
 }
 
-.cst-btn-secondary{
-    background-color: $color-plain;
-    border: 1px solid $color-primary;   
-    color: $color-primary;
-    
-    &:hover{
-        background-color: $color-primary;
-        border: 1px solid $color-primary;   
-        color: $color-plain;
-    }    
-}
+.cst-btn-neutral {
+  background-color: $color-primary;
+  color: $color-plain;
+  transition: 0.3s;
 
-.cst-btn-eclipse{
-    width: 55px;
-    height: 30px;
-    border-radius: 100px;
-}
-
-.cst-float-on{
-    margin-left: -40px;
-    z-index: 2;
+  &:hover {
+    background-color: darken($color-primary, 20%);
+    color: $color-plain;
     transition: 0.3s;
+  }
 }
 
-.cst-float-off{
-    margin-left: -0px;    
+.cst-btn-success {
+  background-color: $color-warning;
+  color: $color-plain;
+  transition: 0.3s;
+
+  &:hover {
+    background-color: darken($color-warning, 20%);
+    color: $color-plain;
     transition: 0.3s;
+  }
+}
+
+.cst-btn-danger {
+  background-color: $color-negative;
+  color: $color-plain;
+  transition: 0.3s;
+
+  &:hover {
+    background-color: darken($color-negative, 20%);
+    color: $color-plain;
+    transition: 0.3s;
+  }
+}
+
+.cst-btn-eclipse {
+  width: 55px;
+  height: 30px;
+  border-radius: 100px;
+}
+
+.cst-float-on {
+  margin-left: -40px;
+  z-index: 2;
+  transition: 0.3s;
+}
+
+.cst-float-off {
+  margin-left: -0px;
+  transition: 0.3s;
 }
 
 // .cst-btn-add{
@@ -123,39 +159,42 @@
 // }
 
 .cst-table {
-    width: 100%;
-    border-collapse: collapse;    
-    transition: 0.3s;
-    font-size: 12px ;
+  width: 100%;
+  border-collapse: collapse;
+  transition: 0.3s;
+  font-size: 14px;
+  word-break: break-all;
 
-    thead tr th{
-        background-color: lighten($color-primary, 32%);
-        font-weight: normal;
-        text-transform: uppercase;
-        color: $color-secondary;
-        padding-top: 15px;
-        padding-bottom: 15px;
-        
-    }
+  thead tr {
+    border-top: 1px solid lighten($color-primary, 23%);
+    border-bottom: 1px solid lighten($color-primary, 23%);
+  }
 
-    td{
-        padding: 18px 10px;
-    }
+  thead tr th {
+    background-color: lighten($color-primary, 32%);
+    text-transform: uppercase;
+    color: $color-secondary;
+    padding-top: 15px;
+    padding-bottom: 15px;
+  }
 
-    tbody tr{
-        cursor: pointer;
-        // padding: 10px !important;
-        text-transform: capitalize;   
-        
-        &:hover{
-            background-color: lighten($color-primary, 32%);
-            transition: 0.3s;
-        }
+  td {
+    padding: 18px 10px;
+    vertical-align: middle;
+  }
+
+  tbody tr {
+    cursor: pointer;
+    text-transform: capitalize;
+
+    &:hover {
+      background-color: lighten($color-primary, 32%);
+      transition: 0.3s;
     }
+  }
 }
 
-.cst-avatar{
-    width: 30px;
-    height: 30px
+.cst-avatar {
+  width: 30px;
+  height: 30px;
 }
-
