--- a/src/index.scss
+++ b/src/index.scss
@@ -6,6 +6,33 @@ input::-webkit-inner-spin-button {
   margin: 0;
 }
 
+/* 
+X-SmallNone	<576px
+Small	sm	≥576px
+Medium	md	≥768px
+Large	lg	≥992px
+Extra large	xl	≥1200px
+Extra extra large	xxl	≥1400px
+*/
+
+@media (max-width: 991px) {
+  .cst-content {
+    padding-left: 0px !important;
+    transition: 0.3s;
+  }
+
+  .cst-float-on {
+    margin-left: 215px !important;
+    z-index: 2;
+    transition: 0.3s;
+  }
+
+  .cst-float-off {
+    margin-left: 10px !important;
+    transition: 0.3s;
+  }
+}
+
 .cst-sidebar {
   background-color: $color-plain;
   width: 250px;
