--- a/src/index.scss
+++ b/src/index.scss
@@ -113,6 +113,14 @@ Extra extra large	xxl	≥1400px
   cursor: pointer;
 }
 
+.cst-hover-respond {
+  transition: 0.3s;
+  &:hover {
+    background-color: lighten($color-primary, 35%);
+    transition: 0.3s;
+  }
+}
+
 .cst-form-control {
   border: 1px solid lighten($color-primary, 10%);
   color: $color-primary;
@@ -234,7 +242,7 @@ Extra extra large	xxl	≥1400px
 }
 
 .cst-float-off {
-  margin-left: -0px;
+  margin-left: 15px;
   transition: 0.3s;
 }
 
