Added popover in table action methods

--- a/src/index.scss
+++ b/src/index.scss
@@ -117,6 +117,10 @@ Extra extra large	xxl	≥1400px
   color: $color-negative;
 }
 
+.cst-text-neutral {
+  color: $color-neutral;
+}
+
 .cst-letter-spacing {
   letter-spacing: 4px;
 }
