--- a/src/colorbase.scss
+++ b/src/colorbase.scss
@@ -4,4 +4,5 @@ $color-plain: rgb(255, 255, 255);
 $color-neutral: rgb(173, 173, 173);
 $color-positive: rgba(0, 127, 0, 1);
 $color-negative: rgba(211, 0, 0, 1);
+$color-negative-dark: rgba(180, 64, 71, 1);
 $color-warning: rgba(187, 127, 47, 1);
