--- a/src/index.scss
+++ b/src/index.scss
@@ -138,10 +138,18 @@ Extra extra large	xxl	≥1400px
   cursor: pointer;
 }
 
-.cst-hover-respond {
+.cst-hover-bg-respond {
   transition: 0.3s;
   &:hover {
     background-color: lighten($color-primary, 35%);
+    transition: 0.3s;
+  }
+}
+
+.cst-hover-color-respond {
+  transition: 0.3s;
+  &:hover {
+   color: lighten($color-primary, 29%);
     transition: 0.3s;
   }
 }
@@ -159,6 +167,23 @@ Extra extra large	xxl	≥1400px
   }
 }
 
+.cst-form-control-inner-padding{
+  padding-left: 35px;
+}
+
+.cst-form-icon-float{
+  position: absolute;
+  color: $color-primary;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;  
+  padding: 0px 10px;
+  
+}
+
 .cst-form-invalid {
   border: 1px solid lighten($color-negative, 10%);
   color: $color-negative;
@@ -172,15 +197,17 @@ Extra extra large	xxl	≥1400px
 }
 
 .cst-section-shadow {
-  box-shadow: -1px 1px 28px -8px rgba(0, 0, 0, 0.75);
-  -webkit-box-shadow: -1px 1px 28px -8px rgba(0, 0, 0, 0.75);
-  -moz-box-shadow: -1px 1px 28px -8px rgba(0, 0, 0, 0.75);
+  box-shadow: 0px 10px 50px 0px rgba(0, 0, 0, 0.2);
   // max-height: calc(100vh - 199px);
   // overflow-y: auto;
 }
 
 .cst-border-bottom {
   border-bottom: 1px solid rgba($color-primary, 0.4);
+}
+
+.cst-border-right{
+  border-right: 1px dotted rgba($color-primary, 1);
 }
 
 .cst-btn-primary {
@@ -231,7 +258,7 @@ Extra extra large	xxl	≥1400px
 }
 
 .cst-btn-danger {
-  background-color: $color-negative;
+  background-color: $color-negative-dark;
   color: $color-plain;
   transition: 0.3s;
 
@@ -301,8 +328,7 @@ Extra extra large	xxl	≥1400px
   }
 
   tbody tr {
-    cursor: pointer;
-    // text-transform: capitalize;
+    cursor: pointer;    
 
     &:hover {
       background-color: lighten($color-primary, 32%);
