Added password form peek in login page

--- a/src/index.scss
+++ b/src/index.scss
@@ -316,6 +316,18 @@ height: 100%;
   padding: 0px 10px;
 }
 
+.cst-form-icon-float-end {
+  position: absolute;
+  color: $color-primary;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding: 0px 10px;
+}
+
 .cst-form-invalid {
   border: 1px solid lighten($color-negative, 10%);
   color: $color-negative;
