--- a/src/index.scss
+++ b/src/index.scss
@@ -35,6 +35,20 @@ Extra extra large	xxl	≥1400px
 
 // ? Breakpoint declarations
 @media (max-width: 991px) {
+  .cst-sidebar-overlay {
+    display: block !important;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #000;
+    opacity: 0.5;
+    transition: 0.3s;
+  }
+
   .popover {
     margin-left: -40px;
   }
@@ -139,6 +153,10 @@ Extra extra large	xxl	≥1400px
   overflow-y: auto;
   height: 100vh;
   z-index: 2;
+}
+
+.cst-sidebar-overlay {
+  display: none;
 }
 
 .cst-content {
@@ -495,7 +513,7 @@ Extra extra large	xxl	≥1400px
 .cst-float-on {
   margin-left: -40px;
   z-index: 2;
-  transition: 0.3s;  
+  transition: 0.3s;
 }
 
 .cst-float-off {
