Setup data filter and sort specifications

--- a/src/index.scss
+++ b/src/index.scss
@@ -307,6 +307,10 @@ Extra extra large	xxl	≥1400px
   min-height: 500px;
 }
 
+.cst-max-h-md {
+  max-height: 500px;
+}
+
 .cst-h-xs {
   max-height: 320px;
 }
