Added return module

--- a/src/index.scss
+++ b/src/index.scss
@@ -426,7 +426,7 @@ Extra extra large	xxl	≥1400px
     background-color: $color-plain;
     border: 1px solid $color-primary;
     color: $color-primary;
-    font-weight: bold;
+    // font-weight: bold;
   }
 
   &:disabled {
