--- a/src/index.scss
+++ b/src/index.scss
@@ -640,14 +640,14 @@ Extra extra large	xxl	≥1400px
 .cst-table {
   width: 100%;
   border-collapse: collapse;
-  transition: 0.3s;
-  font-size: 14px;
+  transition: 0.3s;  
   font-weight: bold;
 
   thead tr {
     border-top: 1px solid lighten($color-primary, 23%);
     border-bottom: 1px solid lighten($color-primary, 23%);
     vertical-align: middle;
+    font-size: 14px;
   }
 
   thead tr th {
@@ -671,10 +671,13 @@ Extra extra large	xxl	≥1400px
       transition: 0.3s;
     }
   }
+
+  tbody td {
+    font-size: 12px;
+  }
 }
 
-.cst-subtable {
-  // width: 100%;
+.cst-subtable {  
   border-collapse: collapse;
   transition: 0.3s;
   font-size: 14px;
