--- a/src/index.scss
+++ b/src/index.scss
@@ -99,6 +99,7 @@ Extra extra large	xxl	≥1400px
 @media print {
   .cst-print-only {
     display: block !important;
+    border: 1px dotted lighten($color-neutral, 23%)    
   }
 
   .cst-browser-only {
@@ -107,18 +108,20 @@ Extra extra large	xxl	≥1400px
 
   .cst-print-table {
     border-collapse: collapse;
-    table-layout: fixed;
+    table-layout: fixed;   
     width: 100%;
-    font-size: 14px;
 
-    th {
+    thead th {
       text-align: center;
+      font-size: 0.5em;  
+      font-weight: bold;  
     }
 
     th,
     td {
       border: 1px solid #000;
-      padding: 5px;
+      padding: 1px 2px 1px 2px;
+      font-size: 0.6em;
     }
   }
 }
